fix a db dialect issue and introduce PATH operation for journey
