# src/main/java/com/tmv/core/dto/JourneyPatchDTO.java
@@ -1,0 +1,30 @@
+package com.tmv.core.dto;
+
+import com.fasterxml.jackson.annotation.JsonFormat;
+import jakarta.validation.constraints.Size;
+import lombok.*;
+
+import java.time.LocalDate;
+import java.util.List;
+
+@Getter
+@Setter
+@AllArgsConstructor
+@NoArgsConstructor
+@EqualsAndHashCode
+public class JourneyPatchDTO {
+
+    @Size(min = 1, max = 255)
+    private String name;
+
+    @Size(min = 1, max = 1024)
+    private String description;
+
+    @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "yyyy-MM-dd")
+    private LocalDate startDate;
+
+    @JsonFormat(shape = JsonFormat.Shape.STRING, pattern = "yyyy-MM-dd")
+    private LocalDate endDate;
+
+    private List<Long> trackedByImeis;
+}
